<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.omelenko.films.viewmodel.ListViewModel" />
        <variable
            name="film"
            type="com.omelenko.films.film.Film" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_view_title"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/film_title"/>

            <TextView
                android:id="@+id/text_view_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{film.title}"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_view_director"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/film_director"/>

            <TextView
                android:id="@+id/text_view_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{film.director}"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_view_year"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/film_release_year"/>

            <TextView
                android:id="@+id/text_view_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{film.releaseYear}"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_view_genre"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/film_genre"/>

            <TextView
                android:id="@+id/text_view_four"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@{film.genre}"/>


            <TextView
                android:id="@+id/text_view_rating"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/film_rating"/>

            <TextView
                android:id="@+id/text_view_five"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@{film.rating}" />

        </LinearLayout>

    </LinearLayout>

</layout>